# corellia

./: .gitattributes  .gitignore  README.md
src/conf/: iterm2.plist
src/docs/setup/: mac-setup.md
src/js/crawlers/: package-lock.json  package.json  tsconfig.json
src/js/drivetime/: drivetime-analyzer.html  start.sh
src/js/facelandmark-demo/: package-lock.json  package.json
src/js/hermes/: .eslintrc.js  .prettierignore  .prettierrc  .prettierrc.js  eslint.config.mjs  package.json  pnpm-lock.yaml
src/js/webgpu-demo/: video-captioner.html
src/python/arc2face/: build_preview.py  download_models.py  requirements.txt  requirements_controlnet.txt  setup.sh  test_arc2face.py  test_arc2face_controlnet.py  test_pytorch3d.py
src/python/tartarus/: main.py  pyproject.toml  scrape_target.py
src/python/tartarus/typings/browser_use/: __init__.pyi  logging_config.pyi  utils.pyi
src/python/tartarus/typings/browser_use/agent/: gif.pyi  prompts.pyi  service.pyi  views.pyi
src/python/tartarus/typings/browser_use/agent/message_manager/: service.pyi  utils.pyi  views.pyi
src/python/tartarus/typings/browser_use/browser/: browser.pyi  context.pyi  views.pyi
src/python/tartarus/typings/browser_use/controller/: service.pyi  views.pyi
src/python/tartarus/typings/browser_use/controller/registry/: service.pyi  views.pyi
src/python/tartarus/typings/browser_use/dom/: service.pyi  views.pyi
src/python/tartarus/typings/browser_use/dom/history_tree_processor/: service.pyi  view.pyi
src/python/tartarus/typings/browser_use/telemetry/: service.pyi  views.pyi
(+133 files in other folders)
