[project]
name = "tartarus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.1.40",
    "langchain>=0.3.23",
    "pydantic>=2.11.2",
]

[[tool.uv.index]]
url = "https://pypi.python.org/simple"
default = true
